Updated User Guide (mediawiki)

--- a/User-Guide.mediawiki
+++ b/User-Guide.mediawiki
@@ -4,7 +4,7 @@ Synergy lets you easily share your mouse and keyboard between multiple computers
 
 This user guide is useful for setting up Synergy. For answers to common problems, please see the [[User FAQ]]. This user guide is written for Synergy version 1.4 – please upgrade if you are using an older version (like 1.3). To ﬁnd your version, click the "Help" menu, and select "About" or "About Synergy".
 
-More information and download links can be found at [the Synergy website](http://synergy-project.org).
+More information and download links can be found at [http://synergy-project.org the Synergy website).
 
 ==Install==
 
@@ -55,7 +55,7 @@ The server computer will share its keyboard and mouse with clients. It needs to 
 * To move a client, drag the existing screen to another cell.
 * If you drag a screen on top of another screen, the screens will switch places.
 Note: This tool imposes a 5x3 limit of screens, though it is possible to have more screens
-by editing the [[conﬁguration file|Text Config]] manually.
+by editing the [[Text Config|configuration file]] manually.
 
 Once you have added a client to your grid, it will have the name "Unnamed". Double-click the icon to change its name to the name of your client.
 
@@ -67,7 +67,7 @@ Now you need to click "Apply" to activate the conﬁguration. If the Apply butto
 
 At this point you should note the "IP Addresses" line at the top of the main Synergy window. You will use one of the IP Addresses listed here on each Client computer to connect it to the Server.
 
-_Note: A Synergy installation will have a default port number set for connecting (client) or listening (server). The server port on the Synergy server must not be blocked by a firewall (see the [[Troubleshooting]] section). Make sure the port the Synergy server is using allows incoming connections and that it is the same port number listed in the Synergy client (see [[Configure a Client]]).
+_Note: A Synergy installation will have a default port number set for connecting (client) or listening (server). The server port on the Synergy server must not be blocked by a firewall (see the [[#Troubleshooting] section). Make sure the port the Synergy server is using allows incoming connections and that it is the same port number listed in the Synergy client (see [[#Configure a Client]]).
 
 ===Configure a Client===
 Once you've conﬁgured your Server, you need to connect each Client to the server. Assuming you selected "Client" during the wizard, the Client option should be checked on the main window. In the "Server IP" field, enter the IP address of the server. This will be the one from the Server's Synergy screen, in the field named "IP Addresses".
