--- a/User-Guide.mediawiki
+++ b/User-Guide.mediawiki
@@ -71,11 +71,11 @@ At this point you should note the "IP Addresses" line at the top of the main Syn
 
 ===Configure a Client===
 Once you've conﬁgured your Server, you need to connect each Client to the server. Assuming you selected "Client" during the wizard, the Client option should be checked on the main window. In the "Server IP" field, enter the IP address of the server. This will be the one from the Server's Synergy screen, in the field named "IP Addresses".
-'''Note:''' This field will also accept a hostname if you have DNS conﬁgured on your local network (most users do not).
+Note: This field will also accept a hostname if you have DNS conﬁgured on your local network (most users do not).
 
 Click Apply or Start.
 
-'''Note:''' The port number on the Synergy client must be set to the same number as the port number on the Synergy server. You may check this by going to Edit --> Settings (Win/Linux) or Synergy --> Preferences (Mac) to display what port numbers each are set. The default is 24800.
+Note: The port number on the Synergy client must be set to the same number as the port number on the Synergy server. You may check this by going to Edit --> Settings (Win/Linux) or Synergy --> Preferences (Mac) to display what port numbers each are set. The default is 24800.
 
 ==Startup on Boot==
 
