--- a/User-Guide.mediawiki
+++ b/User-Guide.mediawiki
@@ -68,7 +68,7 @@ At this point you should note the ''IP Addresses'' line at the top of the main S
 
 '''Note:''' A Synergy installation will have a default port number set for connecting (client) or listening (server). The server port on the Synergy server must not be blocked by a firewall (see the [[User Guide#Troubleshooting|Troubleshooting]] section). Make sure the port that the Synergy server is using allows incoming connections and that it is the same port number listed in the Synergy client (see [[User Guide#Configure_a_Client|Configure a Client]]).
 
-===Configure a Client
+===Configure a Client===
 Once you've conﬁgured your Server, you need to connect each Client to the server. Assuming you selected ''Client'' during the wizard, the Client option should be checked on the main window. In the ''Server IP'' field, enter the IP address of the server. This will be the one from the Server's ''Synergy'' screen, in the ''IP Addresses'' field.
 '''Note:''' This field will also accept a hostname if you have DNS conﬁgured on your local network (most users do not).
 
