--- a/_Sidebar.md.mediawiki
+++ b/_Sidebar.md.mediawiki
@@ -2,19 +2,19 @@
 
 ==User==
 
-# [[User Guide]]
-# [[User FAQ]]
-# [[Text Config]]
-# [[Security]]
-# [[Requirements]]
-# [http://synergy-project.org/wiki/User Legacy Wiki]
+* [[User Guide]]
+* [[User FAQ]]
+* [[Text Config]]
+* [[Security]]
+* [[Requirements]]
+* [http://synergy-project.org/wiki/User Legacy Wiki]
 
 ==Developer==
 
-# [[Issues]]
-# [[Compiling]]
-# [[Code Style]]
-# [[Buildbot]]
-# [[Source Code]]
-# [[Version Planning]]
-# [http://synergy-project.org/wiki/Developer Legacy Wiki]
+* [[Issues]]
+* [[Compiling]]
+* [[Code Style]]
+* [[Buildbot]]
+* [[Source Code]]
+* [[Version Planning]]
+* [http://synergy-project.org/wiki/Developer Legacy Wiki]
