--- a/_Sidebar.md.mediawiki
+++ b/_Sidebar.md.mediawiki
@@ -7,6 +7,7 @@
 * [[Text Config]]
 * [[Security]]
 * [[Requirements]]
+* [[Startup]]
 * [http://synergy-project.org/wiki/User Legacy Wiki]
 
 ==Developer==
